feat: safe area
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,4 +10,12 @@
   body {
     @apply min-h-full;
   }
+
+  .h-inherit {
+    height: inherit;
+  }
+
+  .min-h-inherit {
+    min-height: inherit;
+  }
 }
