--- a/app/fonts/berkeley-mono/berkeley-mono.css
+++ b/app/fonts/berkeley-mono/berkeley-mono.css
@@ -3,7 +3,8 @@
   font-weight: 100 900;
   font-display: swap;
   font-style: normal;
-  src: url("./BerkeleyMonoVariable-Regular.woff2") format("woff2-variations"),
+  src:
+    url("./BerkeleyMonoVariable-Regular.woff2") format("woff2-variations"),
     url("./BerkeleyMonoVariable-Regular.woff2") format("woff2");
   src: url("./BerkeleyMonoVariable-Regular.woff2") format("woff2")
     tech("variations");
