--- a/app/fonts/inter/inter.css
+++ b/app/fonts/inter/inter.css
@@ -8,7 +8,8 @@
   font-weight: 100 900;
   font-display: swap;
   font-style: normal;
-  src: url("./Inter.var.woff2") format("woff2-variations"),
+  src:
+    url("./Inter.var.woff2") format("woff2-variations"),
     url("./Inter.var.woff2") format("woff2");
   src: url("./Inter.var.woff2") format("woff2") tech("variations");
 }
@@ -18,7 +19,8 @@
   font-weight: 100 900;
   font-display: swap;
   font-style: italic;
-  src: url("./Inter-Italic.var.woff2") format("woff2-variations"),
+  src:
+    url("./Inter-Italic.var.woff2") format("woff2-variations"),
     url("./Inter-Italic.var.woff2") format("woff2");
   src: url("./Inter-Italic.var.woff2") format("woff2") tech("variations");
 }
