--- a/app/styles/fun-hover-link.css
+++ b/app/styles/fun-hover-link.css
@@ -6,7 +6,8 @@
   background-image: linear-gradient(0deg, var(--line) 0%, var(--line) 100%);
   background-position: 100% 100%;
   background-size: 100% var(--size);
-  transition: background-size 0.2s linear var(--background-delay),
+  transition:
+    background-size 0.2s linear var(--background-delay),
     color 0.2s linear 0.2s;
 }
 
