--- a/app/fonts/inter/inter.css
+++ b/app/fonts/inter/inter.css
@@ -6,8 +6,8 @@
 	font-weight: 100;
 	font-display: swap;
 	src:
-		url("./Inter-Thin.woff2") format("woff2"),
-		url("./Inter-Thin.woff") format("woff");
+		url("./inter-thin.woff2") format("woff2"),
+		url("./inter-thin.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -15,8 +15,8 @@
 	font-weight: 100;
 	font-display: swap;
 	src:
-		url("./Inter-ThinItalic.woff2") format("woff2"),
-		url("./Inter-ThinItalic.woff") format("woff");
+		url("./inter-thinitalic.woff2") format("woff2"),
+		url("./inter-thinitalic.woff") format("woff");
 }
 
 @font-face {
@@ -25,8 +25,8 @@
 	font-weight: 200;
 	font-display: swap;
 	src:
-		url("./Inter-ExtraLight.woff2") format("woff2"),
-		url("./Inter-ExtraLight.woff") format("woff");
+		url("./inter-extralight.woff2") format("woff2"),
+		url("./inter-extralight.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -34,8 +34,8 @@
 	font-weight: 200;
 	font-display: swap;
 	src:
-		url("./Inter-ExtraLightItalic.woff2") format("woff2"),
-		url("./Inter-ExtraLightItalic.woff") format("woff");
+		url("./inter-extralightitalic.woff2") format("woff2"),
+		url("./inter-extralightitalic.woff") format("woff");
 }
 
 @font-face {
@@ -44,8 +44,8 @@
 	font-weight: 300;
 	font-display: swap;
 	src:
-		url("./Inter-Light.woff2") format("woff2"),
-		url("./Inter-Light.woff") format("woff");
+		url("./inter-light.woff2") format("woff2"),
+		url("./inter-light.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -53,8 +53,8 @@
 	font-weight: 300;
 	font-display: swap;
 	src:
-		url("./Inter-LightItalic.woff2") format("woff2"),
-		url("./Inter-LightItalic.woff") format("woff");
+		url("./inter-lightitalic.woff2") format("woff2"),
+		url("./inter-lightitalic.woff") format("woff");
 }
 
 @font-face {
@@ -63,8 +63,8 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		url("./Inter-Regular.woff2") format("woff2"),
-		url("./Inter-Regular.woff") format("woff");
+		url("./inter-regular.woff2") format("woff2"),
+		url("./inter-regular.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -72,8 +72,8 @@
 	font-weight: 400;
 	font-display: swap;
 	src:
-		url("./Inter-Italic.woff2") format("woff2"),
-		url("./Inter-Italic.woff") format("woff");
+		url("./inter-italic.woff2") format("woff2"),
+		url("./inter-italic.woff") format("woff");
 }
 
 @font-face {
@@ -82,8 +82,8 @@
 	font-weight: 500;
 	font-display: swap;
 	src:
-		url("./Inter-Medium.woff2") format("woff2"),
-		url("./Inter-Medium.woff") format("woff");
+		url("./inter-medium.woff2") format("woff2"),
+		url("./inter-medium.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -91,8 +91,8 @@
 	font-weight: 500;
 	font-display: swap;
 	src:
-		url("./Inter-MediumItalic.woff2") format("woff2"),
-		url("./Inter-MediumItalic.woff") format("woff");
+		url("./inter-mediumitalic.woff2") format("woff2"),
+		url("./inter-mediumitalic.woff") format("woff");
 }
 
 @font-face {
@@ -101,8 +101,8 @@
 	font-weight: 600;
 	font-display: swap;
 	src:
-		url("./Inter-SemiBold.woff2") format("woff2"),
-		url("./Inter-SemiBold.woff") format("woff");
+		url("./inter-semibold.woff2") format("woff2"),
+		url("./inter-semibold.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -110,8 +110,8 @@
 	font-weight: 600;
 	font-display: swap;
 	src:
-		url("./Inter-SemiBoldItalic.woff2") format("woff2"),
-		url("./Inter-SemiBoldItalic.woff") format("woff");
+		url("./inter-semibolditalic.woff2") format("woff2"),
+		url("./inter-semibolditalic.woff") format("woff");
 }
 
 @font-face {
@@ -120,8 +120,8 @@
 	font-weight: 700;
 	font-display: swap;
 	src:
-		url("./Inter-Bold.woff2") format("woff2"),
-		url("./Inter-Bold.woff") format("woff");
+		url("./inter-bold.woff2") format("woff2"),
+		url("./inter-bold.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -129,8 +129,8 @@
 	font-weight: 700;
 	font-display: swap;
 	src:
-		url("./Inter-BoldItalic.woff2") format("woff2"),
-		url("./Inter-BoldItalic.woff") format("woff");
+		url("./inter-bolditalic.woff2") format("woff2"),
+		url("./inter-bolditalic.woff") format("woff");
 }
 
 @font-face {
@@ -139,8 +139,8 @@
 	font-weight: 800;
 	font-display: swap;
 	src:
-		url("./Inter-ExtraBold.woff2") format("woff2"),
-		url("./Inter-ExtraBold.woff") format("woff");
+		url("./inter-extrabold.woff2") format("woff2"),
+		url("./inter-extrabold.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -148,8 +148,8 @@
 	font-weight: 800;
 	font-display: swap;
 	src:
-		url("./Inter-ExtraBoldItalic.woff2") format("woff2"),
-		url("./Inter-ExtraBoldItalic.woff") format("woff");
+		url("./inter-extrabolditalic.woff2") format("woff2"),
+		url("./inter-extrabolditalic.woff") format("woff");
 }
 
 @font-face {
@@ -158,8 +158,8 @@
 	font-weight: 900;
 	font-display: swap;
 	src:
-		url("./Inter-Black.woff2") format("woff2"),
-		url("./Inter-Black.woff") format("woff");
+		url("./inter-black.woff2") format("woff2"),
+		url("./inter-black.woff") format("woff");
 }
 @font-face {
 	font-family: "Inter";
@@ -167,8 +167,8 @@
 	font-weight: 900;
 	font-display: swap;
 	src:
-		url("./Inter-BlackItalic.woff2") format("woff2"),
-		url("./Inter-BlackItalic.woff") format("woff");
+		url("./inter-blackitalic.woff2") format("woff2"),
+		url("./inter-blackitalic.woff") format("woff");
 }
 
 /* -------------------------------------------------------
@@ -186,7 +186,7 @@ Usage:
 	font-display: swap;
 	font-style: normal;
 	font-named-instance: "Regular";
-	src: url("./Inter-roman.var.woff2") format("woff2");
+	src: url("./inter-roman.var.woff2") format("woff2");
 }
 @font-face {
 	font-family: "Inter var";
@@ -194,7 +194,7 @@ Usage:
 	font-display: swap;
 	font-style: italic;
 	font-named-instance: "Italic";
-	src: url("./Inter-italic.var.woff2") format("woff2");
+	src: url("./inter-italic.var.woff2") format("woff2");
 }
 
 /* --------------------------------------------------------------------------
@@ -215,5 +215,5 @@ explicitly, e.g.
 	font-weight: 100 900;
 	font-display: swap;
 	font-style: oblique 0deg 10deg;
-	src: url("./Inter.var.woff2") format("woff2");
+	src: url("./inter.var.woff2") format("woff2");
 }
