--- a/app/assets/berkeley-mono.css
+++ b/app/assets/berkeley-mono.css
@@ -4,10 +4,10 @@
 	font-display: swap;
 	font-style: normal;
 	src:
-		url("/fonts/berkeley-mono/BerkeleyMonoVariable-Regular.woff2")
+		url("./fonts/berkeley-mono/berkeley-mono-variable-regular.woff2")
 			format("woff2-variations"),
-		url("/fonts/berkeley-mono/BerkeleyMonoVariable-Regular.woff2")
+		url("./fonts/berkeley-mono/berkeley-mono-variable-regular.woff2")
 			format("woff2");
-	src: url("/fonts/berkeley-mono/BerkeleyMonoVariable-Regular.woff2")
+	src: url("./fonts/berkeley-mono/berkeley-mono-variable-regular.woff2")
 		format("woff2") tech("variations");
 }
