chore: remove postcss-100vh-fix
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -6,46 +6,47 @@
 	--color-link: #ea567c;
 }
 
-/* import type { Config } from "tailwindcss";
-import defaultTheme from "tailwindcss/defaultTheme";
+@layer base {
+	.h-screen {
+		height: 100vh;
+	}
 
-import tailwindcssPaddingSafe from "tailwindcss-padding-safe";
+	@supports (-webkit-touch-callout: none) {
+		.h-screen {
+			height: -webkit-fill-available;
+		}
+	}
+}
 
-export default {
-	darkMode: "media",
-	theme: {
-		extend: {
-			screens: {
-				print: { raw: "print" },
-				"media-fullscreen": {
-					raw: "(display-mode: fullscreen)",
-				},
-				"media-standalone": {
-					raw: "(display-mode: standalone)",
-				},
-				"media-minimal-ui": {
-					raw: "(display-mode: minimal-ui)",
-				},
-				"media-browser": {
-					raw: "(display-mode: browser)",
-				},
-				"media-window-controls-overlay": {
-					raw: "(display-mode: window-controls-overlay)",
-				},
+/*
+	extend: {
+		screens: {
+			print: { raw: "print" },
+			"media-fullscreen": {
+				raw: "(display-mode: fullscreen)",
 			},
-			colors: {
-				blue: {
-					screen: "#1000f2",
-				},
-				link: "#ea567c",
+			"media-standalone": {
+				raw: "(display-mode: standalone)",
 			},
-			fontFamily: {
-				sans: ["Berkeley Mono", ...defaultTheme.fontFamily.sans],
+			"media-minimal-ui": {
+				raw: "(display-mode: minimal-ui)",
+			},
+			"media-browser": {
+				raw: "(display-mode: browser)",
+			},
+			"media-window-controls-overlay": {
+				raw: "(display-mode: window-controls-overlay)",
 			},
 		},
+		colors: {
+			blue: {
+				screen: "#1000f2",
+			},
+			link: "#ea567c",
+		},
+		fontFamily: {
+			sans: ["Berkeley Mono", ...defaultTheme.fontFamily.sans],
+		},
 	},
-	variants: {
-		extend: {},
-	},
-	plugins: [tailwindcssPaddingSafe],
-} satisfies Config; */
+},
+} */
